Task 1417 (Book search)
mvApp:
- AbsProductActivity: added new method skuScanCommonOnBarcodeScanned and
its call to the skuScanCommon in case of barcode is recognized
- ConfigServerActivity: extracted googleBookApiKeyInput field and
replaced reference of the google_book_api_input with it everywhere
- ConfigServerActivity: added handling of 4 lines config to the
parseConfig method. Line 4 if present will be used as google books API
key
- ProductCreateActivity: extracted book check code from the
onActivityResult method to the checkBookBarcodeEntered method and added
additional ISBN code check for any product type there
- ProductCreateActivity: added overridden skuScanCommonOnBarcodeScanned
method implementation which calls checkBookBarcodeEntered 
- BookInfoLoader: added various new constants
- BookInfoLoader: removed bookInfo, image fields
- BookInfoLoader: added mBookInfoMap field
- BookInfoLoader: reworked book information downloading in the
doInBackground, added its conversion to JSON
- BookInfoLoader: modified emtpy loaded attribute check in the
onPostExecute method
- BookInfoLoader: reworked loadBookInfo method to work with JSON instead
of manually parsing response string
- BookInfoLoader: added searchRecursively, checkDataTypeAndSearch,
addBookInfoValue, isIsbnCode methods
- /res/values/settings.xml: added google_api_query_url constant
- AndroidManifest.xml: updated version code and name

mvAppTest:
- BookInfoLoaderTest: added